--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+# Flutter generated plugin registrants
+**/generated_plugin_registrant.*
+**/generated_plugins.cmake
+
+# macOS (❌ 사용하지 않으면 전체 무시)
+macos/
+windows/
